--- a/Django_Docker/toolkeeper_app/templates/group_detail.html
+++ b/Django_Docker/toolkeeper_app/templates/group_detail.html
@@ -71,21 +71,28 @@
                 </div>
             </div>
         </div>
-        {% if group.user == request.user %}
-            <form method="post">
-                {% csrf_token %}
-                <button type="submit" class="btn btn-lg btn-danger" name="delete_group">グループ削除</button>
+        {% if not group.private %}
+        <div class="row row-cols-auto row-cols-md-2 justify-content-center justify-content-md-start">
+            {% if group.user == request.user %}
+                <form method="post" class="col col-sm-6 col-md-4 col-lg-3 mb-3">
+                    {% csrf_token %}
+                    <button type="submit" class="w-100 px-5 px-sm-0 btn btn-lg btn-danger" name="delete_group">グループ削除</button>
+                </form>
                 {% if members_count > 1 %}
-                    <button class="btn btn-lg btn-success">
+                <div class="col col-sm-6 col-md-4 col-lg-3 mb-3">
+                    <button class="w-100 px-5 px-sm-0 btn btn-lg btn-success">
                         <a class="nav-link" href="{% url 'toolkeeper_app:group_host' group.id %}">ホストを変更</a>
                     </button>
+                </div>
                 {% endif %}
-            </form>
-        {% endif %}
-        {% if group.user != request.user %}
-            <button class="btn btn-lg btn-danger mb-3">
-                <a class="nav-link" href="{% url 'toolkeeper_app:group_leave' group.id %}">グループを退会</a>
-            </button>
+            {% else %}
+                <div class="col-8 col-md-4 mb-3">
+                    <button class="w-100 btn btn-lg btn-danger">
+                        <a class="nav-link" href="{% url 'toolkeeper_app:group_leave' group.id %}">グループを退会</a>
+                    </button>
+                </div>
+            {% endif %}            
+        </div>
         {% endif %}
         <div class="d-grid">
             <button class="btn btn-lg btn-2 d-grid">
@@ -103,12 +110,34 @@
     const txt = document.getElementById("text").textContent; // テキスト取得
 
     btn.addEventListener("click", () => { // ボタンをクリックしたら
-        navigator.clipboard
-            .writeText(txt) // テキストをクリップボードに書き込み
-            .then(
-            (success) => console.log('テキストのコピーに成功'),
-            (error) => console.log('テキストのコピーに失敗')
+        // navigator.clipboard有効分岐
+        if (navigator.clipboard) {
+            // テキストをクリップボードに書き込み
+            navigator.clipboard.writeText(txt).then(
+                (success) => console.log('テキストのコピーに成功'),
+                (error) => console.log('テキストのコピーに失敗')
             );
+
+        } else {
+            const isIos = navigator.userAgent.match(/ipad|iphone/i);
+            const textarea = document.createElement('textarea');
+            textarea.value = txt;
+            document.body.appendChild(textarea);
+
+            if (isIos) {
+                const range = document.createRange();
+                range.selectNodeContents(textarea);
+                const selection = window.getSelection();
+                selection?.removeAllRanges();
+                selection?.addRange(range);
+                textarea.setSelectionRange(0, 999999);
+            } else {
+                textarea.select();
+            }
+            const result = document.execCommand('copy');// テキストをクリップボードに書き込み
+
+            document.body.removeChild(textarea);
+        }
 
         btn.innerHTML = '<i class="bi bi-check2"></i>'; // ボタンの文字変更
         setTimeout(() => (btn.innerHTML = 
